tweak css for mobile display and rebuild.

--- a/static/css/hugo-academic.css
+++ b/static/css/hugo-academic.css
@@ -151,6 +151,12 @@ pre {
   overflow: auto;
 }
 
+pre code{
+  overflow: auto;
+  word-wrap: normal;
+  white-space: pre;
+}
+
 hr {
   border: 0;
   height: 1px;
